--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "tsc && node build/src/index.js",
+    "dev": "ts-node-dev src/index.ts",
+    "tsc": "tsc",
+    "ts-node": "ts-node",
+    "start-ts": "ts-node src/index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "author": "",
   "license": "ISC",
@@ -16,10 +20,23 @@
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
     "helmet": "^4.6.0",
-    "mongoose": "^5.13.13",
+    "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.7.16",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.3"
   }
 }
