--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node build/src/index.js",
+    "start": "node build/src/index.js",
     "dev": "ts-node-dev src/index.ts",
     "tsc": "tsc",
     "ts-node": "ts-node",
